Add pagination for `GET /cases`